<resources>
    <string name="app_name">Numerology</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="vehicle_num">Vehicle Number</string>
    <string name="check">Check</string>
    <string name="total_value">Total value</string>
    <string name="pyramid_value">Pyramid value</string>
</resources>
