<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:layout_marginRight="@dimen/dp_5"
        android:id="@+id/numerologyItemNameTv"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name"
        android:textSize="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/background_dark"
        />

    <TextView
        android:layout_marginRight="@dimen/dp_5"
        android:id="@+id/numerologyItemTotalValTv"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/activity_horizontal_margin"
        android:text="@string/total_value"
        android:textColor="@android:color/background_dark"
        />

    <TextView
        android:layout_marginRight="@dimen/dp_5"
        android:id="@+id/numerologyItemPyramidValTv"
        android:text="@string/pyramid_value"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/background_dark"
        />

</LinearLayout>