<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/lighter_gray"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kaveri.numerology.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_alignParentTop="true"
        android:id="@+id/scrollView"
        android:layout_above="@+id/check_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/nameLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/nameTv"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/activity_horizontal_margin" />

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/background_dark"
                    android:digits="qwertyuiopasdfghjklzxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM, "
                    android:textSize="@dimen/activity_horizontal_margin" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dobLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameLL"
                android:orientation="horizontal"
                android:textColor="@android:color/background_dark"
                android:weightSum="2">

                <TextView
                    android:id="@+id/dob"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_of_birth"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/activity_horizontal_margin" />

                <EditText
                    android:id="@+id/dobEt"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableRight="@mipmap/ic_perm_contact_calendar_black_24dp"
                    android:editable="false"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/activity_horizontal_margin" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mobNumLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dobLL"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/mobTv"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mobile_num"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/activity_horizontal_margin" />

                <EditText
                    android:id="@+id/mobNumEt"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/background_dark"
                    android:textSize="@dimen/activity_horizontal_margin" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vehicleNumLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobNumLL"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/vehicleNumTv"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/vehicle_num"
                    android:textSize="@dimen/activity_horizontal_margin" />

                <EditText
                    android:id="@+id/vehicleNumEt"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/background_dark"
                    android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklzxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM, "
                    android:textSize="@dimen/activity_horizontal_margin" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/check_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/check"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textSize="@dimen/activity_horizontal_margin" />

</RelativeLayout>
